# Chaste-Joshua-Bull

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
Data/: 22680-08_ROI_33_hypoxiaXY.csv  22680-08_ROI_33_necrosisXY.csv  22680-08_ROI_33_predictedO2Mask.csv  22680-08_ROI_33_quiescenceXY.csv  22680-08_ROI_33_stromaLocations.csv  22680-08_ROI_33_stromaXY.csv
apps/: CMakeLists.txt  CTestTestfile.cmake  Distribute_ParallelAddingMacrophages.py  Distribute_ParallelChemotaxisImplementationTesting.py  Distribute_ParallelDiffusionImplementationTesting.py  Distribute_ParallelDorieReproduction_AddMicrospheresAtCertainSize.py  Distribute_ParallelDorieReproduction_LabelledCells.py  Distribute_ParallelDorieReproduction_Macrophages.py  Distribute_ParallelDorieReproduction_Microspheres.py  Distribute_ParallelDorieReproduction_SteadyStateQuest.py  Distribute_ParallelDorieReproduction_SteadyStateQuestRescaledFromScratch.py  Distribute_ParallelDorieReproduction_SteadyStateQuest_Rescaled.py  Distribute_ParallelFullSpheroidSimulationsWithMacrophages.py  Distribute_ParallelLocalBrownianMotionComparison.py  Distribute_ParallelMacrophagesThroughMonolayerDifferentialAdhesionParamSweep.py  Distribute_ParallelNodeBasedTumourSpheroid.py  Distribute_ParallelSpheroidGrowthVaryingOxygenThresholds.py  Distribute_SpheroidInfiltration_CSFonBoundary.py  Exe_ExampleStandaloneExecutable.cpp  Makefile  cmake_install.cmake
apps/src/: .Exe_ParallelFullSpheroidSimulationsWithMacrophages.cpp.swp  Copy of Exe_ParallelDiffusionImplementationTesting.cpp  Exe_ParallelAddingMacrophages.cpp  Exe_ParallelChemotaxisImplementationTesting.cpp  Exe_ParallelDiffusionImplementationTesting.cpp  Exe_ParallelDorieReproduction_AddMicrospheresAtCertainSize.cpp  Exe_ParallelDorieReproduction_LabelledCells.cpp  Exe_ParallelNodeBasedTumourSpheroid.cpp  (+11 more)
test/: CMakeLists.txt  CTestTestfile.cmake  ContinuousTestPack.txt  Makefile  cmake_install.cmake
(+137 files in other folders)
